Evento/Evento/force-app/main/default/objects/Reserva_de_Evento__c/fields/Data_do_Evento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Evento__c</fullName>
    <label>Data do Evento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>