Evento/Evento/force-app/main/default/objects/Reserva_de_Evento__c/fields/Numero_de_Participantes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Participantes__c</fullName>
    <label>Número de Participantes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>