Evento/Evento/force-app/main/default/objects/Reserva_de_Evento__c/fields/Valor_por_Participante__c.field-meta.xml
<CustomField>
    <fullName>Valor_por_Participante__c</fullName>
    <label>Valor por Participante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>