Evento/Evento/force-app/main/default/objects/Reserva_de_Evento__c/fields/Valor_Total_da_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_da_Reserva__c</fullName>
    <formula>Numero_de_Participantes__c *  Valor_por_Participante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total da Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>